Put OOBE UI on touch display if no keyboard detected

This will enable devices without a keyboard but with a touch display to go
through the OOBE setup.

BUG=668449

Review-Url: https://codereview.chromium.org/2865003003
Cr-Commit-Position: refs/heads/master@{#470912}

Former-commit-id: bcbc0c40b5987b07425a9bad2f9dadfeb4612182