chrome/browser/ui/webui/chromeos/login/oobe_ui.cc
@@ -52,6 +52,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/ui/webui/chromeos/login/network_dropdown_handler.h"
 #include "chrome/browser/ui/webui/chromeos/login/network_screen_handler.h"
 #include "chrome/browser/ui/webui/chromeos/login/network_state_informer.h"
+#include "chrome/browser/ui/webui/chromeos/login/oobe_display_chooser.h"
 #include "chrome/browser/ui/webui/chromeos/login/reset_screen_handler.h"
 #include "chrome/browser/ui/webui/chromeos/login/signin_screen_handler.h"
 #include "chrome/browser/ui/webui/chromeos/login/supervised_user_creation_screen_handler.h"
@@ -79,6 +80,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "content/public/common/content_switches.h"
 #include "ui/base/resource/resource_bundle.h"
 #include "ui/base/webui/web_ui_util.h"
+#include "ui/display/display.h"
+#include "ui/events/devices/input_device.h"
+#include "ui/events/devices/input_device_manager.h"
 
 namespace chromeos {
 
@@ -206,6 +210,19 @@ std::string GetDisplayType(const GURL& url) {
     return OobeUI::kLoginDisplay;
   }
   return path;
+}
+
+bool IsKeyboardConnected() {
+  const std::vector<ui::InputDevice>& keyboards =
+      ui::InputDeviceManager::GetInstance()->GetKeyboardDevices();
+  for (const ui::InputDevice& keyboard : keyboards) {
+    if (keyboard.type == ui::INPUT_DEVICE_INTERNAL ||
+        keyboard.type == ui::INPUT_DEVICE_EXTERNAL) {
+      return true;
+    }
+  }
+
+  return false;
 }
 
 }  // namespace
@@ -338,6 +355,11 @@ OobeUI::OobeUI(content::WebUI* web_ui, const GURL& url)
   // TabHelper is required for OOBE webui to make webview working on it.
   content::WebContents* contents = web_ui->GetWebContents();
   extensions::TabHelper::CreateForWebContents(contents);
+
+  // TODO(felixe): Display iteration and primary display selection not supported
+  // in Mash. See http://crbug.com/720917.
+  if (!ash_util::IsRunningInMash() && !IsKeyboardConnected())
+    oobe_display_chooser_ = base::MakeUnique<OobeDisplayChooser>();
 }
 
 OobeUI::~OobeUI() {
@@ -561,6 +583,9 @@ bool OobeUI::IsJSReady(const base::Closure& display_is_ready_callback) {
 
 void OobeUI::ShowOobeUI(bool show) {
   core_handler_->ShowOobeUI(show);
+
+  if (show && oobe_display_chooser_)
+    oobe_display_chooser_->TryToPlaceUiOnTouchDisplay();
 }
 
 void OobeUI::ShowSigninScreen(const LoginScreenContext& context,
@@ -607,6 +632,11 @@ void OobeUI::UpdateLocalizedStringsIfNeeded() {
   base::DictionaryValue localized_strings;
   GetLocalizedStrings(&localized_strings);
   static_cast<CoreOobeView*>(core_handler_)->ReloadContent(localized_strings);
+}
+
+void OobeUI::OnDisplayConfigurationChanged() {
+  if (oobe_display_chooser_)
+    oobe_display_chooser_->TryToPlaceUiOnTouchDisplay();
 }
 
 }  // namespace chromeos
